k8s/Extender-scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latency-aware-scheduler
  namespace: kube-system
  labels:
    app: latency-aware-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency-aware-scheduler
  template:
    metadata:
      labels:
        app: latency-aware-scheduler
    spec:
      serviceAccountName: latency-aware-scheduler
      nodeSelector:
          node-role.kubernetes.io/control-plane: ""
      tolerations:                        
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: kube-scheduler
        image: registry.k8s.io/kube-scheduler:v1.30.0
        command:
          - kube-scheduler
          - --config=/etc/kubernetes/scheduler/scheduler-config.yaml
          - --v=5
        volumeMounts:
          - name: scheduler-config
            mountPath: /etc/kubernetes/scheduler
      volumes:
      - name: scheduler-config
        configMap:
          name: latency-aware-scheduler-config
