k8s/Latency-aware-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latency-aware-scheduler
  namespace: kube-system
  labels:
    app: latency-aware-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency-aware-scheduler
  template:
    metadata:
      labels:
        app: latency-aware-scheduler
    spec:
      serviceAccountName: latency-aware-scheduler
      volumes:
        - name: scheduler-config
          configMap:
            name: latency-aware-scheduler-config
      containers:
        # === Container 1: kube-scheduler instance ===
        - name: kube-scheduler
          image: registry.k8s.io/kube-scheduler:v1.29.3
          command:
            - kube-scheduler
            - --config=/etc/kube-scheduler/config.yaml
            - -v=4
          volumeMounts:
            - name: scheduler-config
              mountPath: /etc/kube-scheduler
        # === Container 2: extender ===
        - name: latency-aware-extender
          image: ghcr.io/mirzahilmi/latency-aware-scheduler:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: scheduler-config
              mountPath: /etc/scheduler
