k8s/Proberv2.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: proberv2
  namespace: riset
spec:
  selector:
    matchLabels:
      name: proberv2-app
  template:
    metadata:
      labels:
        name: proberv2-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist

      # needed this to access the host layer nftables
      hostNetwork: true
      serviceAccountName: proberv2

      volumes:
        - name: mount
          secret:
            secretName: proberv2-secrets
      containers:
        - name: proberv2-app
          image: ghcr.io/mirzahilmi/proberv2:0.3.8
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mount
              readOnly: true
              mountPath: /tmp

          # readinessProbe:
          #   httpGet:
          #     path: /scores
          #     port: 3000

          resources:
            limits:
              memory: 500Mi
            requests:
              memory: 250Mi

          lifecycle:
            preStop:
              exec:
                command: ["/bin/sleep", "10"]

          securityContext:
            runAsUser: 0
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
