k8s/Cilium.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb-svc
  namespace: cilium-monitoring
spec:
  type: LoadBalancer
  loadBalancerClass: "io.cilium/node"
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-lb-svc
  namespace: cilium-monitoring
spec:
  type: LoadBalancer
  loadBalancerClass: "io.cilium/node"
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
