k8s/Hellopod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: riset
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopod
  namespace: riset
spec:
  replicas: 9
  selector:
    matchLabels:
      app: hellopod
  template:
    metadata:
      labels:
        app: hellopod
      annotations:
        scheduler.alpha.kubernetes.io/preferred-node-type: "worker"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist

      containers:
        - name: hellopod-app
          image: ghcr.io/mirzahilmi/hellopod:0.2.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 500Mi
              cpu: 200m
            requests:
              memory: 500Mi
              cpu: 100m
          # per-container security context
          # lock down privileges inside the container
          securityContext:
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false # prevent acting like host root
      terminationGracePeriodSeconds: 600
      # per-pod security context
      # enable seccomp and force non-root user
      securityContext:
        seccompProfile:
          type: RuntimeDefault # enable seccomp and the runtimes default profile
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: hellopod-np-svc
  namespace: riset
spec:
  type: NodePort
  selector:
    app: hellopod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
      nodePort: 30000
