k8s/HellopodStatic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopod-static
  namespace: riset
spec:
  replicas: 16
  selector:
    matchLabels:
      app: hellopod-static
  template:
    metadata:
      labels:
        app: hellopod-static
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/worker
                    operator: Exists

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: hellopod-static

      containers:
        - name: hellopod-static-app
          image: ghcr.io/mirzahilmi/hellopod-static:1.1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            limits:
              cpu: 300m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi

          # per-container security context
          # lock down privileges inside the container
          securityContext:
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false # prevent acting like host root

      terminationGracePeriodSeconds: 120

      # per-pod security context
      # enable seccomp and force non-root user
      securityContext:
        seccompProfile:
          type: RuntimeDefault # enable seccomp and the runtimes default profile

        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: hellopod-static-np-svc
  namespace: riset
spec:
  type: NodePort
  selector:
    app: hellopod-static
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
      nodePort: 30000
