k8s/Prober.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prober
  namespace: riset
spec:
  clusterIP: None
  selector:
    app: prober
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
# apiVersion: apps/v1
# kind: DaemonSet
# metadata:
#   name: prober
#   namespace: riset
# spec:
#   selector:
#     matchLabels:
#       name: prober-app
#   template:
#     metadata:
#       labels:
#         name: prober-app
#     spec:
#       affinity:
#         nodeAffinity:
#           requiredDuringSchedulingIgnoredDuringExecution:
#             nodeSelectorTerms:
#               - matchExpressions:
#                   - key: node-role.kubernetes.io/control-plane
#                     operator: DoesNotExist

# statefulset needed to have stable network ID for each pober pod taht running on each node
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prober
  namespace: riset
spec:
  serviceName: "prober"
  replicas: 3               # based on number of worker nodes in the cluster
  selector:
    matchLabels:
      app: prober
  template:
    metadata:
      labels:
        app: prober
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist

      # needed this to access the host layer nftables
      hostNetwork: true
      serviceAccountName: prober
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:     
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values: ["prober"]
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: prober-app
          image: ghcr.io/mirzahilmi/prober:0.3.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /scores
              port: 3000
          resources:
            limits:
              memory: 500Mi
            requests:
              memory: 250Mi

          lifecycle:
            preStop:
              exec:
                command: ["/bin/sleep", "10"]

          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
