k8s/Prometheus.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
# Headless Service untuk expose tiap Pod Traefik secara langsung
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
spec:
  clusterIP: None   # Headless Service
  selector:
    app: traefik
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v3.0.0
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus"
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: prometheus-config
            mountPath: /etc/prometheus
          - name: prometheus-data
            mountPath: /prometheus
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: prometheus-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30001
      protocol: TCP
      name: http
  selector:
    app: prometheus
