k8s/Scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latency-aware-scheduler
  namespace: riset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: latency-aware-scheduler
  template:
    metadata:
      labels:
        app: latency-aware-scheduler
    spec:
      serviceAccountName: latency-aware-scheduler
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/hostname: k8s-master-1-vm
      containers:
        # Container 1: Kube-scheduler
        - name: kube-scheduler
          image: registry.k8s.io/kube-scheduler:v1.29.0
          command:
            - kube-scheduler
            - --config=/etc/scheduler/config.yaml
            - --v=4 # Verbosity level (0-10, 4 = info+debug)
          volumeMounts:
            - name: scheduler-config
              mountPath: /etc/scheduler
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
        # Container 2: Latency Extender
        - name: latency-extender
          image: adindaysafitri/scheduler:0.0.26
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: scheduler-configfile
              mountPath: /tmp/config.json
              subPath: config.json
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          # Readiness probe: cek apakah container siap menerima traffic
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: scheduler-config
          configMap:
            name: latency-scheduler-config
        - name: scheduler-configfile
          configMap:
            name: latency-scheduler-configfile
---
apiVersion: v1
kind: Service
metadata:
  name: latency-extender-svc
  namespace: riset
  labels:
    app: latency-aware-scheduler
spec:
  type: ClusterIP
  selector:
    app: latency-aware-scheduler
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
  sessionAffinity: None
